--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,7 +5,7 @@ name: Boring Twitter Client
 agent:
   machine:
     type: a1-standard-4
-    os_image: macos-mojave
+    os_image: macos-mojave-xcode11
 
 blocks:
   - name: Build app
@@ -45,6 +45,6 @@ blocks:
             - make ios_lib cargo=../rust_toolchain/cargo/bin/cargo
             - cd swift
             # Select Xcode version
-            - bundle exec xcversion select 10.2.1
+            - bundle exec xcversion select 11.0
             # Build project
             - bundle exec fastlane build
